--- a/app/views/tasks/_single_task.html.haml
+++ b/app/views/tasks/_single_task.html.haml
@@ -14,7 +14,7 @@
 .row
   .col-xs-3 Actions:
   .col-xs-9
-    = link_to 'Edit', edit_task_path(task), id: "edit_link", class: "shortcut-link"
+    = link_to 'Edit', edit_task_path(task, tag: @tag.andand.name), id: "edit_link", class: "shortcut-link"
     = link_to 'Destroy', task, :method => :delete, :data => { :confirm => 'Are you sure?' }, id: "destroy_link", class: "shortcut-link"
     = link_to 'Finished', task_done_path(task), method: :post, id: "finished_link", class: "shortcut-link"
     = link_to 'Worked on it', task_worked_path(task), method: :post, id: "worked_link", class: "shortcut-link"
