--- a/app/views/tasks/next.html.haml
+++ b/app/views/tasks/next.html.haml
@@ -2,6 +2,6 @@
   .col-xs-12
     Next task:
 
-= render partial: 'single_task', locals: {task: @task}
+= render partial: 'single_task', locals: {task: @task, tag: @tag}
 
 = link_to 'New Task', new_task_path
