--- a/app/views/tasks/_single_task.html.haml
+++ b/app/views/tasks/_single_task.html.haml
@@ -15,7 +15,7 @@
   .col-xs-3 Actions:
   .col-xs-9
     = link_to 'Edit', edit_task_path(task, tag: tag.andand.name), id: "edit_link", class: "shortcut-link"
-    = link_to 'Destroy', destroy_task_path(task, tag: tag.andand.name), :method => :delete, :data => { :confirm => 'Are you sure?' }, id: "destroy_link", class: "shortcut-link"
+    = link_to 'Destroy', task_path(task, tag: tag.andand.name), :method => :delete, :data => { :confirm => 'Are you sure?' }, id: "destroy_link", class: "shortcut-link"
     = link_to 'Finished', task_done_path(task, tag: tag.andand.name), method: :post, id: "finished_link", class: "shortcut-link"
     = link_to 'Worked on it', task_worked_path(task, tag: tag.andand.name), method: :post, id: "worked_link", class: "shortcut-link"
     = link_to 'Postpone', task_postpone_path(task, tag: tag.andand.name), method: :post, id: "postpone_link", class: "shortcut-link"
