--- a/app/views/tasks/_single_task.html.haml
+++ b/app/views/tasks/_single_task.html.haml
@@ -1,3 +1,4 @@
+- tag_name = (tag.present? ? tag.name : nil)
 
 .row
   .col-xs-8
@@ -14,9 +15,9 @@
 .row
   .col-xs-3 Actions:
   .col-xs-9
-    = link_to 'Edit', edit_task_path(task, tag: tag.andand.name), id: "edit_link", class: "shortcut-link"
-    = link_to 'Destroy', task_path(task, tag: tag.andand.name), :method => :delete, :data => { :confirm => 'Are you sure?' }, id: "destroy_link", class: "shortcut-link"
-    = link_to 'Finished', task_done_path(task, tag: tag.andand.name), method: :post, id: "finished_link", class: "shortcut-link"
-    = link_to 'Worked on it', task_worked_path(task, tag: tag.andand.name), method: :post, id: "worked_link", class: "shortcut-link"
-    = link_to 'Postpone', task_postpone_path(task, tag: tag.andand.name), method: :post, id: "postpone_link", class: "shortcut-link"
-    = link_to 'Split', task_split_path(task, tag: tag.andand.name), id: "split_link", method: :get, class: "shortcut-link"
+    = link_to 'Edit', edit_task_path(task, tag: tag_name), id: "edit_link", class: "shortcut-link"
+    = link_to 'Destroy', task_path(task, tag: tag_name), :method => :delete, :data => { :confirm => 'Are you sure?' }, id: "destroy_link", class: "shortcut-link"
+    = link_to 'Finished', task_done_path(task, tag: tag_name), method: :post, id: "finished_link", class: "shortcut-link"
+    = link_to 'Worked on it', task_worked_path(task, tag: tag_name), method: :post, id: "worked_link", class: "shortcut-link"
+    = link_to 'Postpone', task_postpone_path(task, tag: tag_name), method: :post, id: "postpone_link", class: "shortcut-link"
+    = link_to 'Split', task_split_path(task, tag: tag_name), id: "split_link", method: :get, class: "shortcut-link"
