--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,10 +174,6 @@ h1, .h1, h2, .h2, h3, .h3 {
   min-height: 2rem;
 }
 
-.navbar-text {
-  font-size: 0.75rem;
-}
-
 .navbar-brand {
 //  margin-left: 0;
   margin-right: 1rem;
@@ -194,8 +190,12 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 .nav > li > a {
-  padding: 0.75rem 1.25rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 0;
+  padding-right: 2.25rem;
 }
+
 /* *********************************
 custom icons
 ********************************* */
