--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -189,7 +189,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 //  line-height: 1.0rem;
 }
 
-.nav > li > a {
+p .navbar-text, .nav > li > a {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   padding-left: 0;
