--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ * project rails:
+ *= require fonts
+ *
  * from Bower:
  * this is weird and needs special treatment:
  * disabled...
@@ -34,10 +37,14 @@ overall page style
 ********************************* */
 
 body {
+  font-family: 'Roboto', helvetica, arial, verdana, sans-serif;
+  font-weight: 300;
+//  font-family: 'Webly Sleek UI', helvetica, arial, verdana, sans-serif;
+
+
   //min-width: 320px; // hack for mobile safari
   background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
   line-height: 125%;
   margin: 0; // hack for browser consistency
   padding: 0; // hack for browser consistency
@@ -89,15 +96,16 @@ each size scales up to the smallest screen size for that range.
 */
 
 $break-xs0: 320px; // within bootstrap grid "xs"
-$break-xs1: 410px; // within bootstrap grid "xs"
-$break-xs2: 490px; // within bootstrap grid "xs"
+$break-xs1: 405px; // within bootstrap grid "xs"
+$break-xs2: 485px; // within bootstrap grid "xs"
+$break-xs3: 645px; // within bootstrap grid "xs"
 $break-sm: 768px; // aka bootstrap grid "sm"
 $break-md: 992px; // aka bootstrap grid "md", not used
 
 // xs0
 @media only screen and (max-width: $break-xs1) {
   body {
-    font-size: 13px;
+    font-size: 12.5px;
     zoom: 1.0;
     -moz-transform: scale(1.0);
     -moz-transform-origin: 100% 0;
@@ -109,7 +117,7 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 // xs1
 @media only screen and (min-width: $break-xs1) and (max-width: $break-xs2 - 1) {
   body {
-    font-size: 13px;
+    font-size: 12px;
     zoom: 1.25;
     -moz-transform: scale(1.25);
     -moz-transform-origin: 80% 0;
@@ -119,9 +127,9 @@ $break-md: 992px; // aka bootstrap grid "md", not used
   }
 }
 // xs2
-@media only screen and (min-width: $break-xs2) and (max-width: $break-sm - 1) {
+@media only screen and (min-width: $break-xs2) and (max-width: $break-xs3 - 1) {
   body {
-    font-size: 12px;
+    font-size: 11.5px;
     zoom: 1.5;
     -moz-transform: scale(1.5);
     -moz-transform-origin: 67% 0;
@@ -130,10 +138,21 @@ $break-md: 992px; // aka bootstrap grid "md", not used
     width: 320px;
   }
 }
-// sm
+// xs3
+@media only screen and (min-width: $break-xs3) and (max-width: $break-sm - 1) {
+  body {
+    font-size: 11px;
+    zoom: 2.0;
+    -moz-transform: scale(2.0);
+    -moz-transform-origin: 50% 0;
+  }
+  #inner-central-container {
+    width: 320px;
+  }
+}// sm
 @media only screen and (min-width: $break-sm) and (max-width: $break-md - 1) {
   body {
-    font-size: 13px;
+    font-size: 15px;
     zoom: 1.2;
     -moz-transform: scale(1.2);
     -moz-transform-origin: 83% 0;
@@ -145,7 +164,7 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 // md
 @media only screen and (min-width: $break-md) {
   body {
-    font-size: 11px;
+    font-size: 13px;
     zoom: 1.55;
     -moz-transform: scale(1.55);
     -moz-transform-origin: 64.5% 0;
@@ -175,25 +194,88 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 .navbar-brand {
-//  margin-left: 0;
-  margin-right: 1rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.25rem;
-  padding: 0;
-  font-size: 2.0rem;
+//  font-family: 'Sketch Block', helvetica, arial, verdana, sans-serif;
+//  font-family: 'Gizems Sketch', helvetica, arial, verdana, sans-serif;
+//  font-weight: 400;
+  font-family: 'Roboto', helvetica, arial, verdana, sans-serif;
+  font-weight: 100;
+
+  padding-left: 0;
+  padding-right: 1rem;
+  padding-top: 1.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 2.75rem;
   height: 2.5rem;
 }
 
 .navbar-nav > li > a {
 //  padding: 0.75rem 0.75rem;
-//  line-height: 1.0rem;
+//  padding-bottom: 0.75rem;
+  line-height: 1.0rem;
+  text-align: right;
 }
 
 p .navbar-text, .nav > li > a {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  line-height: 1.0rem;
+  padding-top: 2.25rem;
+  padding-bottom: 0.5rem;
   padding-left: 0;
   padding-right: 2.25rem;
+  text-align: right;
+}
+
+.navbar-toggle {
+padding-top: 0.5rem;
+padding-bottom: 0.5rem;
+padding-left: 0.5rem;
+padding-right: 0.5rem;
+
+}
+
+/* *********************************
+animated dropdown menu
+********************************* */
+
+.navbar-toggle {
+  border: none;
+  background: transparent !important;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  margin-right: .5rem;
+
+  &:hover {
+    background: transparent !important;
+  }
+
+  .icon-bar {
+    width: 22px;
+    transition: all 0.2s;
+  }
+  .top-bar {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+  }
+  .middle-bar {
+    opacity: 0;
+  }
+  .bottom-bar {
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+  }
+}
+
+.navbar-toggle.collapsed {
+  .top-bar {
+    transform: rotate(0);
+  }
+  .middle-bar {
+    opacity: 1;
+  }
+  .bottom-bar {
+    transform: rotate(0);
+  }
 }
 
 /* *********************************
