--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,8 +104,10 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 
 // xs0
 @media only screen and (max-width: $break-xs1) {
+  html {
+    font-size: 11px;
+  }
   body {
-    font-size: 12.5px;
     zoom: 1.0;
     -moz-transform: scale(1.0);
     -moz-transform-origin: 100% 0;
@@ -116,8 +118,10 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 }
 // xs1
 @media only screen and (min-width: $break-xs1) and (max-width: $break-xs2 - 1) {
+  html {
+    font-size: 11px;
+  }
   body {
-    font-size: 12px;
     zoom: 1.25;
     -moz-transform: scale(1.25);
     -moz-transform-origin: 80% 0;
@@ -128,8 +132,10 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 }
 // xs2
 @media only screen and (min-width: $break-xs2) and (max-width: $break-xs3 - 1) {
+  html {
+    font-size: 11px;
+  }
   body {
-    font-size: 11.5px;
     zoom: 1.5;
     -moz-transform: scale(1.5);
     -moz-transform-origin: 67% 0;
@@ -140,8 +146,10 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 }
 // xs3
 @media only screen and (min-width: $break-xs3) and (max-width: $break-sm - 1) {
-  body {
+  html {
     font-size: 11px;
+  }
+  body {
     zoom: 2.0;
     -moz-transform: scale(2.0);
     -moz-transform-origin: 50% 0;
@@ -151,8 +159,10 @@ $break-md: 992px; // aka bootstrap grid "md", not used
   }
 }// sm
 @media only screen and (min-width: $break-sm) and (max-width: $break-md - 1) {
+  html {
+    font-size: 11px;
+  }
   body {
-    font-size: 15px;
     zoom: 1.2;
     -moz-transform: scale(1.2);
     -moz-transform-origin: 83% 0;
@@ -163,8 +173,10 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 }
 // md
 @media only screen and (min-width: $break-md) {
+  html {
+    font-size: 11px;
+  }
   body {
-    font-size: 13px;
     zoom: 1.55;
     -moz-transform: scale(1.55);
     -moz-transform-origin: 64.5% 0;
@@ -178,6 +190,10 @@ $break-md: 992px; // aka bootstrap grid "md", not used
 /* *********************************
 bootstrap overrides
 ********************************* */
+
+body {
+  font-size: 1.0rem;
+}
 
 p, ol, ul, td {
   font-size: 1.0rem;
@@ -193,31 +209,35 @@ h1, .h1, h2, .h2, h3, .h3 {
   min-height: 2rem;
 }
 
+.navbar-header {
+  min-height: 2.5rem;
+}
+
 .navbar-brand {
 //  font-family: 'Sketch Block', helvetica, arial, verdana, sans-serif;
-//  font-family: 'Gizems Sketch', helvetica, arial, verdana, sans-serif;
-//  font-weight: 400;
-  font-family: 'Roboto', helvetica, arial, verdana, sans-serif;
-  font-weight: 100;
+  font-family: 'Gizems Sketch', helvetica, arial, verdana, sans-serif;
+  font-weight: 400;
+//  font-family: 'Roboto', helvetica, arial, verdana, sans-serif;
+//  font-weight: 100;
 
   padding-left: 0;
   padding-right: 1rem;
-  padding-top: 1.5rem;
+  padding-top: 0.75rem;
   padding-bottom: 0.5rem;
-  font-size: 2.75rem;
+  font-size: 2.25rem;
   height: 2.5rem;
 }
 
-.navbar-nav > li > a {
+.nac > li, .navbar-nav > li > a {
 //  padding: 0.75rem 0.75rem;
-//  padding-bottom: 0.75rem;
+  padding-bottom: 0.75rem;
   line-height: 1.0rem;
   text-align: right;
 }
 
 p .navbar-text, .nav > li > a {
   line-height: 1.0rem;
-  padding-top: 2.25rem;
+  padding-top: 1.25rem;
   padding-bottom: 0.5rem;
   padding-left: 0;
   padding-right: 2.25rem;
