--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -224,9 +224,47 @@ h1, .h1, h2, .h2, h3, .h3 {
   padding-right: 1rem;
   padding-top: 0.75rem;
   padding-bottom: 0.5rem;
-  font-size: 2.25rem;
+  font-size: 2.0rem;
   height: 2.5rem;
 }
+
+.navbar-brand::first-letter {
+  font-size: 1.25em;
+}
+.navbar-brand::nth-letter(2) {
+  font-size: .9em;
+}
+.navbar-brand::nth-letter(3) {
+  font-size: .81em;
+}
+.navbar-brand::nth-letter(4) {
+  font-size: .73em;
+}
+.navbar-brand::nth-letter(5) {
+  font-size: .66em;
+}
+.navbar-brand::nth-letter(6) {
+  font-size: .59em;
+}
+.navbar-brand::nth-letter(7) {
+  font-size: .9em;
+}
+.navbar-brand::nth-letter(8) {
+  font-size: .9em;
+}
+.navbar-brand::nth-letter(9) {
+  font-size: .9em;
+}
+.navbar-brand::nth-letter(10) {
+  font-size: .9em;
+}
+.navbar-brand::nth-letter(11) {
+  font-size: .9em;
+}
+.navbar-brand::nth-letter(12) {
+  font-size: .9em;
+}
+
 
 .nac > li, .navbar-nav > li > a {
 //  padding: 0.75rem 0.75rem;
@@ -236,6 +274,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 p .navbar-text, .nav > li > a {
+  margin: 0;
   line-height: 1.0rem;
   padding-top: 1.25rem;
   padding-bottom: 0.5rem;
