--- a/app/views/nav/_navigation.html.haml
+++ b/app/views/nav/_navigation.html.haml
@@ -1,7 +1,18 @@
 %nav#navigation.navbar.navbar-default
   .container-fluid
     .navbar-header
-      %a.navbar-brand{href: root_path} Prioritizer
+      %a.navbar-brand{href: root_path}<
+        %span#brand_1> P
+        %span#brand_2> r
+        %span#brand_3> i
+        %span#brand_4> o
+        %span#brand_5> r
+        %span#brand_6> i
+        %span#brand_7> t
+        %span#brand_8> i
+        %span#brand_9> z
+        %span#brand_10> e
+        %span#brand_11> r
       %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#navbar-collapse", "data-toggle" => "collapse", :type => "button"}
         %span.sr-only Toggle navigation
         %span.icon-bar.top-bar
