--- a/app/views/nav/_navigation.html.haml
+++ b/app/views/nav/_navigation.html.haml
@@ -2,17 +2,17 @@
   .container-fluid
     .navbar-header
       %a.navbar-brand{href: root_path}<
-        %span#brand_1> P
-        %span#brand_2> r
-        %span#brand_3> i
-        %span#brand_4> o
-        %span#brand_5> r
-        %span#brand_6> i
-        %span#brand_7> t
-        %span#brand_8> i
-        %span#brand_9> z
-        %span#brand_10> e
-        %span#brand_11> r
+        %span#brand_0.letter> P
+        %span#brand_1.letter> r
+        %span#brand_2.letter> i
+        %span#brand_3.letter> o
+        %span#brand_4.letter> r
+        %span#brand_5.letter> i
+        %span#brand_6.letter> t
+        %span#brand_7.letter> i
+        %span#brand_8.letter> z
+        %span#brand_9.letter> e
+        %span#brand_10.letter> r
       %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#navbar-collapse", "data-toggle" => "collapse", :type => "button"}
         %span.sr-only Toggle navigation
         %span.icon-bar.top-bar
