--- a/app/views/nav/_navigation.html.haml
+++ b/app/views/nav/_navigation.html.haml
@@ -20,6 +20,18 @@
         %span.icon-bar.bottom-bar
 
     .collapse.navbar-collapse#navbar-collapse
-      - if @suppress_nav_auth != true
-        %ul.nav.navbar-nav.navbar-right
+      %ul.nav.navbar-nav.navbar-right
+        %li.dropdown
+          %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
+            Dropdown
+            %span.caret
+          %ul.dropdown-menu
+            %li
+              Tags:
+            %li.divider{role: "separator"}
+            - current_user.tags.each do |tag|
+              %li
+                %a{href: next_task_path(tag: tag.name)}
+                = tag.name
+        - if @suppress_nav_auth != true
           = render partial: 'nav/auth_section', locals: {}
