--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -245,7 +245,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   text-align: right;
 }
 
-p .navbar-text, .nav > li > a {
+.navbar-text, .nav > li > a {
   margin: 0;
   line-height: 1.0rem;
   padding-top: 1.25rem;
@@ -351,19 +351,24 @@ draggable item
 shortcuts
 ********************************* */
 
-.shortcut-link {
+.action-logo {
+  font-size: 3.5rem;
+}
+
+.action-link {
   display: inline-block;
   padding-left: 4px;
   padding-right: 6px;
-  line-height: 175%
+  line-height: 175%;
+  font-weight: 400;
 }
 
-div a.shortcut-link::first-letter {
+.shortcut-link::first-letter {
   border-bottom: 2px solid #6d6;
-  font-weight: 800px;
+  font-weight: 800;
 }
 
-div a.shortcut-link:hover::first-letter {
+.shortcut-link:hover::first-letter {
   border-bottom: none;
 }
 
