--- a/app/views/tasks/next.html.haml
+++ b/app/views/tasks/next.html.haml
@@ -4,4 +4,6 @@
 
 = render partial: 'single_task', locals: {task: @task, tag: @tag}
 
-= link_to 'New Task', new_task_path, id: "new_link", class: "shortcut-link"
+= link_to url: new_task_path, id: "new_link", class: "shortcut-link" do
+  = fa_icon "lightbulb-o"
+  New Task
