--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,6 +209,14 @@ h1, .h1, h2, .h2, h3, .h3 {
   min-height: 2rem;
 }
 
+ul:not(.dropdown-menu).navbar-nav li {
+  line-height: 1.0rem;
+  padding-top: 1.25rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0;
+  padding-right: 2.5rem;
+}
+
 .navbar-header {
   min-height: 2.5rem;
 }
@@ -238,21 +246,18 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 
-.nac > li, .navbar-nav > li > a {
+.nav > li, .navbar-nav > li > a {
 //  padding: 0.75rem 0.75rem;
+  padding: 0;
+  margin: 0;
   padding-bottom: 0.75rem;
-  line-height: 1.0rem;
   text-align: right;
 }
 
 .navbar-text, .nav > li > a {
-  margin: 0;
-  line-height: 1.0rem;
-  padding-top: 1.25rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0;
-  padding-right: 2.25rem;
   text-align: right;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar-toggle {
@@ -312,6 +317,10 @@ animated dropdown menu
   .bottom-bar {
     transform: rotate(0);
   }
+}
+
+li.dropdown {
+  line-height: 2rem;
 }
 
 /* *********************************
