--- a/app/views/tasks/_listable_task.html.haml
+++ b/app/views/tasks/_listable_task.html.haml
@@ -1,13 +1,18 @@
-
-%table
-  %tr
-    %td= task.name
-    %td
-      imp:
-      = task.get_importance!
-    %td= task.days_imp
-    %td= task.weeks_imp
-    %td= task.ever_imp
-    %td= link_to 'Show', task
-    %td= link_to 'Edit', edit_task_path(task)
-    %td= link_to 'Destroy', task, :method => :delete, :data => { :confirm => 'Are you sure?' }
+%tr
+  %td{style: "padding: .4em"}= task.name
+  %td{style: "padding: .4em"}= "%.2f" % task.get_importance!
+  %td{style: "padding: .4em"}
+    d:
+    = "%.2f" % task.days_imp
+    w:
+    = "%.2f" % task.weeks_imp
+    e:
+    = "%.2f" % task.ever_imp
+  %td{style: "padding: .4em"}= "%.2f" % task.random_amount
+  %td{style: "padding: .4em"}= "%.2f" % task.attempts_report_done_amount
+  %td{style: "padding: .2em"}= "%.2f" % task.postponed_recently_amount
+  %td{style: "padding: .4em"}= "%.2f" % task.addressed_recently_amount
+  %td{style: "padding: .4em"}= "%.2f" % task.position_amount
+  %td{style: "padding: .4em"}= link_to 'Show', task
+  %td{style: "padding: .4em"}= link_to 'Edit', edit_task_path(task)
+  %td{style: "padding: .4em"}= link_to 'Destroy', task, :method => :delete, :data => { :confirm => 'Are you sure?' }
