--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,3 +1,15 @@
+Debug info:
+%p current_user_from_session_debug:
+  = @current_user_from_session_debug
+%p current_user_debug:
+  = @current_user_debug
+%p current_user_found_debug
+  = @current_user_found_debug
+%p current_user_registered_debug
+  = @current_user_registered_debug
+
+
+
 Tags:
 %ul
   %li
