--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,5 +1,8 @@
 Debug info:
 %p
+  current_session_user_id_debug:
+  = @current_session_user_id_debug
+%p
   current_user_from_session_debug:
   = @current_user_from_session_debug
 %p
