added debug cookie

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,5 +1,8 @@
 Debug info:
 %p
+  tempname cookie:
+  = @tempname_cookie_val
+%p
   current_session_user_id_debug:
   = @current_session_user_id_debug
 %p
