--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
  * from Bower:
  * this is weird and needs special treatment:
  * disabled...
- * = require_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
+ * disabled: = require_ tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
  *= require bootstrap-sass-official
  *= require bootstrap-datepicker
