set slider html back to manual old version

--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -27,10 +27,35 @@
             %span>< ]
           %b really,
           if not done within:
+    .row{style: "margin-top: 5px"}
+      .col-xs-3
+        %div{style: "padding-left: 5px"}
+          %i.icon-down-right-arrow{style: "float: left; position: relative"}
+          = task_builder.label :days
+          %span{:id=>"days_imp_slider_amount_shown", :style => "border:0; color: #f6931f; font-weight:bold;"}
+          %input{:type=>"hidden", :id=>"days_imp_slider_amount_hidden", :name=>"task[days_imp]", :value=>"#{@task.days_imp}"}
+      .field.col-xs-9
+        #days_imp_slider.imp_slider{style: "margin-top: 3px"}
 
-    - form_slider("days_imp", task_builder.label(:days))
-    - form_slider("weeks_imp", task_builder.label(:weeks))
-    - form_slider("ever_imp", task_builder.label(:ever))
+    .row{style: "margin-top: 5px"}
+      .col-xs-3
+        %div{style: "padding-left: 5px"}
+          %i.icon-down-right-arrow{style: "float: left; position: relative"}
+          = task_builder.label :weeks
+          %span{:id=>"weeks_imp_slider_amount_shown", :style => "border:0; color: #f6931f; font-weight:bold;"}
+          %input{:type=>"hidden", :id=>"weeks_imp_slider_amount_hidden", :name=>"task[weeks_imp]", :value=>"#{@task.weeks_imp}"}
+      .field.col-xs-9
+        #weeks_imp_slider.imp_slider{style: "margin-top: 3px"}
+
+    .row{style: "margin-top: 5px"}
+      .col-xs-3
+        %div{style: "padding-left: 5px"}
+          %i.icon-down-right-arrow{style: "float: left; position: relative"}
+          = task_builder.label :ever
+          %span{:id=>"ever_imp_slider_amount_shown", :style => "border:0; color: #f6931f; font-weight:bold;"}
+          %input{:type=>"hidden", :id=>"ever_imp_slider_amount_hidden", :name=>"task[ever_imp]", :value=>"#{@task.ever_imp}"}
+      .field.col-xs-9
+        #ever_imp_slider.imp_slider{style: "margin-top: 3px"}
 
   - if view_detail_level > 8
     .field
