--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
  * these are resolved thanks to bower-rails:
  *= require bootstrap-sass-official
  *= require bootstrap-datepicker
- *= require clockpicker
+ *= require jquery-timepicker-wvega
  *= require select2
  *= require font-awesome
  *
