trying to get blur to show up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
  * this is weird and needs special treatment:
  * disabled...
  * enabled:
+ * note that bower:clean will blow this away!
  *= require_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
  *= require bootstrap-sass-official
