--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,11 @@
  * note that bower:clean will blow this away!
  *= dontrequire_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
- *= require bootstrap-sass-official
- *= require bootstrap-datepicker
- *= require jquery-timepicker-wvega
- *= require select2
- *= require font-awesome
+ *= dontrequire bootstrap-sass-official
+ *= require ../../../client/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.css
+ *= require ../../../client/node_modules/jquery-timepicker/jquery.timepicker.css
+ *= require ../../../client/node_modules/select2/dist/css/select2.css
+ *= require ../../../client/node_modules/font-awesome/css/font-awesome.css
  *
  * standard rails:
  *= require_tree .
