rearranged sprockets assets into webpack ones

--- a/app/views/nav/_navigation.html.haml
+++ b/app/views/nav/_navigation.html.haml
@@ -22,6 +22,9 @@
 
     .collapse.navbar-collapse#navbar-collapse
       %ul.nav.navbar-nav.navbar-right
+        %li
+          %p.navbar-text
+            %a{href: tags_index_path(tag.name)}
         %li.dropdown
           %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
             Where
