--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,10 +21,10 @@
  *= dontrequire_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
  *= dontrequire bootstrap-sass-official
- *= require ../../../client/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.css
- *= require ../../../client/node_modules/jquery-timepicker/jquery.timepicker.css
- *= require ../../../client/node_modules/select2/dist/css/select2.css
- *= require ../../../client/node_modules/font-awesome/css/font-awesome.css
+ *= dontrequire ../../../client/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.css
+ *= dontrequire ../../../client/node_modules/jquery-timepicker/jquery.timepicker.css
+ *= dontrequire ../../../client/node_modules/select2/dist/css/select2.css
+ *= dontrequire ../../../client/node_modules/font-awesome/css/font-awesome.css
  *
  * standard rails:
  *= require_tree .
