trying to make first react component

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -16,6 +16,8 @@
     = fa_icon "lightbulb-o"
   .shortcut-link New Task
 
+= react_component("TasksApp")
+
 / %p all tasks:
 %table{class: "table", style:"margin-top: 6rem"}
   %thead
