got list to focus browsing working

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,4 +16,5 @@
             %p.notice= notice
           - if alert.present?
             %p.alert= alert
+          = react_component("TasksApp")
           = yield
